fix: fix missing space in desktop nav submenu

--- a/okp4-gatsby/src/assets/styles/transversals/_header.scss
+++ b/okp4-gatsby/src/assets/styles/transversals/_header.scss
@@ -269,12 +269,10 @@ header.header {
           .header__submenu {
             position: absolute;
             z-index: 100;
-
             @include media-bp-down(lg) {
               animation: fade-in 1s linear;
               position: relative;
             }
-
             .header__submenu__container {
               position: absolute;
               min-width: 100px;
@@ -293,14 +291,12 @@ header.header {
                 padding: 20px 30px;
                 border-radius: 20px;
                 background: $pushblue;
-
                 background-repeat: repeat;
                 background-size: contain;
 
                 @include media-bp-down(lg) {
                   display: flex;
                   flex-direction: column;
-                  row-gap: 20px;
                   padding: unset;
                   background: none;
                 }
@@ -327,10 +323,13 @@ header.header {
                 }
 
                 .header__submenu__item__separator {
-                  margin: 14px auto 0;
+                  margin: 9px auto;
                   border-top: 0.1px solid $white-80;
                   width: 107px;
                   opacity: 20%;
+                  @include media-bp-down(lg) {
+                    margin: 20px auto;
+                  }
                 }
               }
             }
